--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "*Max Grossman*\r ---",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "CI=false && react-scripts build",
+    "start": "react-scripts",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider;  react-scripts build",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "test": "echo \"Warning: No tests created yet.\"",
